--- a/android/app/src/main/res/layout/layout_info_view.xml
+++ b/android/app/src/main/res/layout/layout_info_view.xml
@@ -11,9 +11,10 @@
         android:layout_height="96dp"
         android:src="@drawable/icon_avatar"/>
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_weight="1"
         android:layout_marginLeft="16dp"
         >
         <TextView
@@ -22,18 +23,26 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textColor="#333333"
-            android:text="test姓名"
             android:textStyle="bold"
             android:layout_marginTop="6dp"/>
         <TextView
-            android:id="@+id/text_dsc"
+            android:id="@+id/text_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textColor="#333333"
-            android:text="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
             android:layout_marginTop="6dp"/>
 
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/changeButton"
+        android:layout_width="30dp"
+        android:layout_height="wrap_content"
+        android:background="#3050ff"
+        android:gravity="center"
+        android:text="切换"
+        android:textColor="#ffffff" />
+
 </LinearLayout>
